--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.Web/Components/Pages/Weather.razor
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Dapr.Aspire/DaprSekiban.Web/Components/Pages/Weather.razor
@@ -297,7 +297,7 @@ else
         }
         catch (Exception ex)
         {
-            // Log error
+            Console.WriteLine($"Error generating sample data: {ex.Message}");
         }
     }
 
